tests/baselines/reference/privateNameInObjectLiteral-3(target=es2015).errors.txt
privateNameInObjectLiteral-3.ts(2,9): error TS18016: Private identifiers are not allowed outside class bodies.


==== privateNameInObjectLiteral-3.ts (1 errors) ====
    const obj = {
        get #foo() {
            ~~~~
!!! error TS18016: Private identifiers are not allowed outside class bodies.
            return ""
        }
    };
    